spring-data-jpa/src/main/java/ru/sabitov/example/error/DuplicateException.java
package ru.sabitov.example.error;

public class DuplicateException extends RuntimeException {
    public DuplicateException(String message) {
        super(message);
    }
}
